[package]
name = "ironandoil-website"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
license-file = "LICENSE"
repository = "https://github.com/ironandoil/website"
homepage = "https://ironandoil.org"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "warn"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
